[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/Workers/WorkersWindow.gd" type="Script" id=1]

[node name="WorkersWindow" type="ConfirmationDialog"]
margin_left = 347.0
margin_top = 247.0
margin_right = 771.0
margin_bottom = 554.0
window_title = "Workers"
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -59.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 392.0
margin_bottom = 224.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 376.0
margin_bottom = 117.0
text = "Type the permillage [0-999] of the population you will attribute at each activity. (previous turn)"
autowrap = true

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 121.0
margin_right = 376.0
margin_bottom = 158.0
custom_constants/vseparation = 18
custom_constants/hseparation = 24
columns = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 162.0
margin_right = 376.0
margin_bottom = 199.0

[node name="ActivePeople" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 48.0
margin_bottom = 37.0
text = "0000"

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 52.0
margin_right = 298.0
margin_bottom = 37.0
text = "‰  of inhabitants are active"

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
visible = false
margin_right = 40.0
margin_bottom = 37.0
text = "On each turn, only 150‰ can be enroled in a new profession."

[connection signal="confirmed" from="." to="." method="_on_WorkersWindow_confirmed"]
[connection signal="modal_closed" from="." to="." method="_on_WorkersWindow_modal_closed"]
[connection signal="worker_quantity_updated" from="." to="." method="_on_WorkersWindow_worker_quantity_updated"]
